[SnackBar] fix centering on IE 11

--- a/src/SnackBar/SnackBar.css
+++ b/src/SnackBar/SnackBar.css
@@ -18,7 +18,6 @@
   z-index: 1;
   color: white;
   width: 100%;
-  margin: 0 auto;
   height: 48px;
   box-sizing: border-box;
   display: inline-flex;
@@ -32,7 +31,6 @@
   .snackbar {
     width: auto;
     max-width: 550px;
-    position: fixed;
   }
 }
 
